# expeditions-adobe-portfolio-rss

./: README.md  generate_rss_feed.py  pyproject.toml  rss.xml  rss.yml
.github/workflows/: deploy.yml  generate_rss.yml
