[tool.poetry]
name = "expeditions-adobe-portfolio-rss"
version = "0.1.0"
description = "RSS feed generator for expeditions.renehlavova.com"
authors = ["Renata Hlavova <hlavova.renata@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
httpx = "^0.27.2"
urllib3 = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
